--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,6 +2,8 @@
 import Layout from "../layouts/Layout.astro";
 import H1 from "../components/H1.astro";
 import Main from "../components/Main.astro";
+// this line makes this a static page and not ssr
+export const prerender = true;
 ---
 
 <Layout title="Rhythm Nation Blog">
